# HSE-school

./: pyproject.toml
Stepik-1/Fibanachi/: небольшое число Фибоначчи.py  огромное число Фибоначчи по модулю.py  последняя цифра большого числа Фибоначчи.py
Stepik-1/NOD/: наибольший общий делитель.py
practice 1/: 1_show_moon.py  2_model.py  3_kmeans_clasters.py  4_dbscan_graph.py  discordic1.py  discordic2.py  main.py
practice 2/: 1_liner_regression.py  1_logistic_regression.py  2_hard_regression.py  2_logistic_reg_polynomial_feat.py  3_liner_regression.py  4_hard_regression.py  discordic3.py  main.py  my.py
