[tool.poetry]
name = "vse school"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sklearn = "^0.0.post1"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
